--- a/build.xml
+++ b/build.xml
@@ -813,7 +813,7 @@ pcgen.filepaths=user
 	<target name="inttest" depends="dointtest, failure.notice, success.notice" description="Run the data/code integration subset of the test suite (include lib/test/junit.jar in CLASSPATH)">
 	</target>
 
-	<target name="dointtest" depends="testclean, test.jar" >
+	<target name="dointtest" depends="testclean, test.jar, reporttest" >
 		<junit fork="yes" printsummary="on" failureproperty="junitfailure" dir="${basedir}">
 			<jvmarg value="-Demma.coverage.out.file=${coverage.dir}/coverage.emma" />
 			<jvmarg value="-Demma.coverage.out.merge=true" />
