Auto convert Default Monster Mode characters Issue#: 1967041
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@6992 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -3937,7 +3937,7 @@ Warnings.PCGenParser.RaceMoreHD=Saved race ({0}) now has more HITDICE.
 Warnings.PCGenParser.RaceNoHD=Saved race ({0}) no longer has a HITDICE tag.
 
 # 0 - Race key
-Warnings.PCGenParser.RaceNoHDDefMon=Saved race ({0}) no longer has a HITDICE tag or,\nwas saved with "Use Default Monsters" on.
+Warnings.PCGenParser.RaceNoHDDefMon=Character of race ({0}) was saved with "Use Default Monsters" on.\nRacial classes have been applied however you will need to rechoose feats and skills\neither manually or by applying a kit.
 
 # 0 - Tag data
 Warnings.PCGenParser.UnknownRaceInfo=Ignoring unknown race info: {0}.
