Fix bug: PRECSKILL UI message wrong   - Merged from 5.14 r7065 Issue#: 2013951
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7066 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -3384,6 +3384,10 @@ PreFeat.error=Exception in PREFEAT\u003A {0}
 
 PreTemplate.error=Exception in PRETEMPLATE\u003A {0}
 
+PreCSkill.toHtml= {0} {1} of {2} must be class skills
+
+PreCSkill.single.toHtml={0} must be a class skill
+
 PreSkill.toHtml={0} {1} ranks in {2}
 
 PreMult.cannot_find_subtest=Can not find test\u003A 
