FReq: PRECAMPAIGN tag for .pcc files Issue#: 1298910
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7092 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -3430,6 +3430,8 @@ PrerequisiteTestFactory.error.cannot_find_test=Can not find a test for\u003A {0}
 
 PreType.toHtml=Type {0} {1}
 
+PreCampaign.toHtml={0} {1} of {2} must be already selected
+
 PreClass.toHtml={1} {2} levels of {0}
 
 PreDeityDomain.toHtml=Deity Domain\u003A {0} {1}
@@ -4151,3 +4153,5 @@ in_diWriteFail=The file {0} could not be written. Installation failed.
 
 #Main Source tab
 in_Src_browser=Unable to open {0} in browser. See log for details.
+
+in_Src_Bad_Combo_Load=The sources you have selected are not compatible.\nPlease resolve the conflict and then Load Sources.
