Add book type to sources display.
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7167 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -4039,6 +4039,10 @@ InfoTabs.ViewCombo.Description=You can change how the items in the table are lis
 InfoTabs.AddButton.Description=Click to add the selected item.
 InfoTabs.RemoveButton.Description=Click to remove the selected item.
 
+SourceModel.Columns.Name=Source Material
+SourceModel.Columns.BookType=Book Type
+SourceModel.Columns.Loaded=Loaded
+
 AbilityModel.Columns.Name=Ability
 AbilityModel.Columns.Type=Type
 AbilityModel.Columns.Cost=Cost
