FReq: [Pathfinder] Experience point tables Issue#: 2016413
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7205 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -2910,6 +2910,10 @@ in_Prefs_hideMonsterClasses=Use HD +/- instead of monster classes
 
 in_Prefs_ignoreMonsterHDCap=Ignore Monster HD Cap
 
+in_Prefs_experience=Experience
+
+in_Prefs_xpTable=Experience table to be used
+
 in_Prefs_pcgen=PCGen
 
 in_Prefs_pcgenTip=Settings that affect the way PCGen works.
