--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -4069,6 +4069,7 @@ InfoAbility.StatusLine.Info=Abilities are color coded: Red = Character does not 
 
 TreeTable.Prompt.Search=Enter the name of the item to find
 
+Ability.Info.Aspects=<b>Aspects:</b>&nbsp;{0}
 Ability.Info.Type=<b>Type:</b>&nbsp;{0}
 Ability.Info.Cost= &nbsp; <b>Cost:</b>&nbsp;{0}
 Ability.Info.Multiple=Can be taken more than once
