FReq: Deprecate BONUS:MOVE Issue#: 2000438
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7801 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -3790,6 +3790,7 @@ Errors.FollowerModel.UnknownColumn=The column {0} not handled in {1}
 Warnings.LstTokens.Deprecated={0} deprecated.  Tag was {1} in {2} of {3}.  {4}
 Warnings.LstTokens.Deprecated.BabToken=Use BONUS:COMBAT|BAB|formula instead.
 Warnings.LstTokens.Deprecated.WeaponAutoToken=Use AUTO:WEAPONPROF instead.
+Warnings.Bonus.Deprecated=BONUS:{0} is deprecated. Tag was BONUS:{1}.  {2}
 
 in_plusSign=+
 in_caretSymbol=^
