Switch to the website for autobuild deploys
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@7984 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/project.properties
+++ b/project.properties
@@ -102,9 +102,9 @@ maven.sourceforge.publish.includes=*.jar,*.exe,*.zip,*.dmg,*.asc
 #########################################
 # The properties for the site goal
 #########################################
-pom.siteAddress=shell.sourceforge.net
-pom.siteDirectory=/home/groups/p/pc/pcgen/htdocs/autobuilds
-maven.site.deploy.method=ssh
+pom.siteAddress=ftp.pcgen-test.org
+pom.siteDirectory=/autobuilds
+maven.site.deploy.method=ftp
 maven.site.failonerror=false
 maven.site.tar.options=-xUf
 
