Get autobuilds working on www.pcgen-test.org
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8034 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/project.properties
+++ b/project.properties
@@ -103,10 +103,16 @@ maven.sourceforge.publish.includes=*.jar,*.exe,*.zip,*.dmg,*.asc
 # The properties for the site goal
 #########################################
 pom.siteAddress=ftp.pcgen-test.org
-pom.siteDirectory=/autobuilds
-maven.site.deploy.method=ftp
+pom.siteDirectory=www.pcgen-test.org/autobuilds
+maven.site.deploy.method=ssh
 maven.site.failonerror=false
 maven.site.tar.options=-xUf
+# Note you need to define the following in your build.properties
+#maven.username=<username>
+#maven.scp.executable=pscp
+#maven.ssh.executable=plink
+#maven.scp.args=-pw <password>
+#maven.ssh.args=-pw <password>
 
 maven.xdoc.date=left
 maven.xdoc.version = ${pom.currentVersion}
