make sure to use pretoken tests in new location
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8146 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/build.xml
+++ b/build.xml
@@ -806,6 +806,7 @@ pcgen.filepaths=user
 			<batchtest todir="${build.dir}/test-results/xml">
 				<fileset dir="${basedir}/code/src/utest">
 				  <include name="plugin/lsttokens/**/*.java"/>
+				  <include name="plugin/pretokens/**/*.java"/>
 				  <include name="pcgen/**/*.java"/>
 				  <exclude name="**/Abstract*.java"/>
 				  <exclude name="**/testsupport/*.java"/>
