PCGen Source Loading is too complex   - Initial demo of user interface   - Allows predefined sources to be loaded via a simplified interface. Issue#: 1625030
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8360 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -4175,3 +4175,11 @@ in_diWriteFail=The file {0} could not be written. Installation failed.
 in_Src_browser=Unable to open {0} in browser. See log for details.
 
 in_Src_Bad_Combo_Load=The sources you have selected are not compatible.\nPlease resolve the conflict and then Load Sources.
+
+# Source Selection dialog
+in_mnuSettingsSources=Quick Source Loading Demo
+
+in_qsrc_title=Load Sources
+
+in_qsrc_intro=Select a Source to load, or define a new set of sources
+in_qsrc_err_none_selected=You must select a source to load from the list.
