PCGen Source Loading is too complex   - Hide and unhide sources (the other half) Issue#: 1625030
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8428 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -261,6 +261,10 @@ in_copy=Copy
 
 in_mn_copy=p
 
+in_hide=Hide
+
+in_unhide=Unhide
+
 #Universal Skill related
 in_rank=Rank
 
@@ -4183,3 +4187,5 @@ in_qsrc_title=Load Sources
 
 in_qsrc_intro=Select a Source to load, or define a new set of sources
 in_qsrc_err_none_selected=You must select a source to load from the list.
+
+in_qsrc_unhide_title=Unhide Sources
