PCGen Source Loading is too complex   - Set simple source dialog as default   - Add preference to allow use of the old source materials tab   - Add Source info tab to guide new users and show what sources are loaded Issue#: 1625030
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8448 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -3183,6 +3183,8 @@ in_Prefs_loadURLs=Allow sources to be loaded from web links
 
 in_Prefs_allowOverride=Allow newer sources to override duplicate object from older sources
 
+in_Prefs_useAdvancedSourceSelect=Use advanced source selection
+
 #Preferences dialogs
 in_Prefs_urlBlocked=Use at your own risk!\nIt's possible that malicious files could be downloaded and\nput the security of your system at risk.\nOnly download files you trust and protect\nyour system with anti-virus software.
 
@@ -4181,7 +4183,7 @@ in_Src_browser=Unable to open {0} in browser. See log for details.
 in_Src_Bad_Combo_Load=The sources you have selected are not compatible.\nPlease resolve the conflict and then Load Sources.
 
 # Source Selection dialog
-in_mnuSettingsSources=Quick Source Loading Demo
+in_mnuSettingsSources=Load Sources
 
 in_qsrc_title=Load Sources
 
@@ -4189,3 +4191,11 @@ in_qsrc_intro=Select a Source to load, or define a new set of sources
 in_qsrc_err_none_selected=You must select a source to load from the list.
 
 in_qsrc_unhide_title=Unhide Sources
+
+in_source_info=Info
+
+in_si_intro=<html><h3>You are using the following source material</h3></html>
+in_si_gamemode=Game Mode
+in_si_sources=Source Materials
+in_si_nosources=None.<br>Please use the <b>Settings > Load Sources</b> menu to load source materials before continuing. 
+in_si_whatnext=<html><h3>Wondering what to do next?</h3> You can:<UL><li>Use the <img src="{0}"> <b>File > New</b> menu to create a new character;<li>Use the <img src="{1}"> <b>File > New NPC</b> to create a random character;<li>Use the <img src="{2}"> <b>File > Open</b> to load a previously saved character.</UL><html>
