PCGen Source Loading is too complex   - Double click loads source   - Load happens outside of Swing thread   - Show sources from last time and default source from current game mode (even if not normally shown), highlight last used source Issue#: 1625030
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8460 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -4192,6 +4192,9 @@ in_qsrc_err_none_selected=You must select a source to load from the list.
 
 in_qsrc_unhide_title=Unhide Sources
 
+in_qsrc_game_default={0}
+in_qsrc_last_loaded=Last Loaded ({0})
+
 in_qsrc_gameModeIntro=Select a game mode for your new source collection
 
 in_source_info=Info
