OS Freq: Secret Notes https://sourceforge.net/tracker2/?func=detail&aid=2000008&group_id=25576&atid=748297
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8610 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -1184,6 +1184,8 @@ in_otherAssets=Other Assets
 
 in_magicItems=Magic Items
 
+in_dmNotes=DM Notes
+
 in_newItem=New Item
 
 in_newValue=New Value
