[ 2062577 ] Need method to track references Issue#: 2062577
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@8831 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -3121,6 +3121,8 @@ in_Prefs_input=Input
 
 in_Prefs_printDeprecation=Show Format Deprecation Messages
 
+in_Prefs_printUnconstructed=Show Detail for Unconstructed References
+
 in_Prefs_output=Output
 
 in_Prefs_outputSheetHTMLDefault=Default HTML Output Sheet
