--- a/build.xml
+++ b/build.xml
@@ -75,10 +75,16 @@ These files can be renamed and used for releases.
 	<property name="default.main.class" value="pcgen.gui.pcGenGUI" />
 	<property name="manifest.extra.jars" value="${lib.dir}/apache/commons-lang-2.4.jar ${lib.dir}/fop/xercesImpl-2.5.0.jar ${lib.dir}/fop/avalon-framework-cvs-20020806.jar ${lib.dir}/fop/xml-apis.jar ${lib.dir}/fop/xalan-2.5.2.jar ${lib.dir}/fop/batik.jar ${lib.dir}/fop/fop.jar ${lib.dir}/lnf/kunststoff.jar ${lib.dir}/lnf/skinlf.jar ${lib.dir}/lnf/wraplf.jar ${lib.dir}/jep/jep-2.4.1.jar ${lib.dir}/jep/ext-1.1.1.jar ${lib.dir}/jdom.jar ${lib.dir}/MRJ141Stubs.jar ${lib.dir}/jep/djep-2.24.jar ${lib.dir}/jep/RngPack-1.1a.jar ${lib.dir}/tracerapi.jar ${lib.dir}/cobra/cobra.jar ${lib.dir}/cobra/js.jar" />
 
+	<!-- For writing the compatibility checker jar -->
+	<property name="convert-jar.bin.file" value="batch-convert.jar" />
+	<property name="convert-manifest.file" value="code/comp-manifest" />
+	<property name="convert-manifest.main.class" value="pcgen.gui.converter.ConvertDataset" />
+
 	<!-- Text files always shipped along -->
 	<property name="project.license.file" value="LICENSE" />
 
 	<property name="project.dist.files" value="${project.license.file}" />
+	<property name="batch.dist.files" value="${convert-jar.bin.file}" />
 
 	<!-- For installation -->
 	<property name="bin.pcgen.bat" value="pcgen.bat" />
@@ -93,6 +99,7 @@ These files can be renamed and used for releases.
 	<property name="zip.jars.file" value="jars.zip" />
 	<property name="zip.manual.file" value="manual.zip" />
 	<property name="zip.autobuild.file" value="autobuild.zip" />
+	<property name="zip.batch.file" value="batch-convert.zip" />
 
 	<!-- The jars required to run PCGen -->
 	<path id="project.jars">
@@ -209,12 +216,21 @@ These files can be renamed and used for releases.
 			<fileset dir="${build.classes.dir}" excludes="test/**,src/**,plugin/**" />
 			<fileset dir="." includes="${project.license.file}" />
 		</jar>
+		<jar jarfile="${bin.dir}/${convert-jar.bin.file}" manifest="${convert-manifest.file}">
+			<fileset dir="${src.java.dir}" includes="images/" />
+			<fileset dir="${build.classes.dir}" excludes="test/**,src/**,plugin/**" />
+			<fileset dir="." includes="${project.license.file}" />
+		</jar>
 	</target>
 
 	<!-- Create the MANIFEST.MF file that's included inside the Pcgen.jar file -->
 	<target name="manifest" description="Write the Java manifest">
 		<echo file="${manifest.file}">Manifest-Version: 1.2
 Main-Class: ${manifest.main.class}
+Class-Path: ${manifest.extra.jars}
+</echo>
+		<echo file="${convert-manifest.file}">Manifest-Version: 1.2
+Main-Class: ${convert-manifest.main.class}
 Class-Path: ${manifest.extra.jars}
 </echo>
 	</target>
@@ -431,6 +447,28 @@ pcgen.filepaths=user
 				<include name="templates/**" />
 				<exclude name="**/CVS/*, **/.svn/*" />
 			</fileset>
+		</zip>
+	</target>
+
+	<target name="zip.batch">
+		<delete file="${zip.batch.file}" />
+		<zip zipfile="${zip.batch.file}">
+			<fileset dir="." includes="${batch.dist.files}" />
+			<fileset dir=".">
+				<include name="plugins/**" />
+				<include name="system/**" />
+				<exclude name="**/CVS/*, **/.svn/*" />
+			</fileset>
+			<fileset dir=".">
+				<include name="${lib.dir}/jdom.*"/>
+				<include name="${lib.dir}/djep*"/>
+				<include name="${lib.dir}/mrj*"/>
+				<include name="${lib.dir}/MRJ*"/>
+				<include name="${lib.dir}/jep/*.jar"/>
+				<include name="${lib.dir}/jep/*.txt"/>
+				<exclude name="**/test/**,javacc.jar,**/emma/**" />
+			</fileset>
+
 		</zip>
 	</target>
 
