Improve display of large number of files in warnings messages.
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9098 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -4176,8 +4176,8 @@ in_diDataSetNotSelected=You must select a data set to install before proceeding.
 in_diDataFolderNotSelected=You must select a location to install the data to before proceeding.
 in_diDataFolderNotExist=The selected data folder {0} does not exist. Please correct this using the Preferences dialog.
 in_diBadDataSet=The data set {0} could not be read. It may be in use by another program or not a PCGen data set.
-in_diNonStandardFiles=The following files are outside of the normal data areas. Are you sure you want to install them? \n{0}
-in_diOverwriteFiles=The following files already exist. Do you want to overwrite them? \n{0}
+in_diNonStandardFiles=<html>The following files are outside of the normal data areas. Are you sure you want to install them?</html>
+in_diOverwriteFiles=<html>The following files already exist. Do you want to overwrite them?<html>
 in_diDirNotCreated=The directory {0} could not be created. Installation failed.
 in_diWriteFail=The file {0} could not be written. Installation failed.
 
