Add buttons to switch between source selection modes.
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9102 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -4186,14 +4186,22 @@ in_Src_browser=Unable to open {0} in browser. See log for details.
 
 in_Src_Bad_Combo_Load=The sources you have selected are not compatible.\nPlease resolve the conflict and then Load Sources.
 
+in_Src_basic_source=Use Basic Screen
+in_Src_basic_sourceTip=Select the sources for your character from the most common options
+
 # Source Selection dialog
 in_mnuSettingsSources=Load Sources
+in_mnuSettingsSourcesTip=Select the sources for your character from the most common options
+
+in_qsrc_messageText=Source Selection...
 
 in_qsrc_title=Load Sources
 
 in_qsrc_intro=Select a Source to load, or define a new set of sources
 in_qsrc_err_none_selected=You must select a source to load from the list.
 
+in_qsrc_advanced=Use Advanced Screen
+ 
 in_qsrc_unhide_title=Unhide Sources
 
 in_qsrc_game_default={0}
