--- a/build.xml
+++ b/build.xml
@@ -219,9 +219,6 @@ These files can be renamed and used for releases.
 	</target>
 	<target name="convert-jar" depends="compile, manifest" description="Build (Link) converter jar files">
 		<jar jarfile="${bin.dir}/${convert-jar.bin.file}" manifest="${convert-manifest.file}">
-			<fileset dir="${src.java.dir}" includes="images/" />
-			<fileset dir="${build.classes.dir}" excludes="test/**,src/**,plugin/**" />
-			<fileset dir="." includes="${project.license.file}" />
 		</jar>
 	</target>
 
@@ -233,7 +230,7 @@ Class-Path: ${manifest.extra.jars}
 </echo>
 		<echo file="${convert-manifest.file}">Manifest-Version: 1.2
 Main-Class: ${convert-manifest.main.class}
-Class-Path: ${manifest.extra.jars}
+Class-Path: pcgen.jar ${manifest.extra.jars}
 </echo>
 	</target>
 
