Switch back to pcgen-test.org site for the autobuilds
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9578 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/project.properties
+++ b/project.properties
@@ -102,8 +102,8 @@ maven.sourceforge.publish.includes=*.jar,*.exe,*.zip,*.dmg,*.asc
 #########################################
 # The properties for the site goal
 #########################################
-pom.siteAddress=akozakis.id.au
-pom.siteDirectory=public_html/pcgen/autobuilds
+pom.siteAddress=ftp.pcgen-test.org
+pom.siteDirectory=www.pcgen-test.org/autobuilds
 maven.site.deploy.method=ssh
 maven.site.failonerror=false
 maven.site.tar.options=-xUf
