Update compile-optimize to match earlier compile target changes   - Merge from 5.16 branch
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9867 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/build.xml
+++ b/build.xml
@@ -173,7 +173,7 @@ These files can be renamed and used for releases.
 
 	<!-- Alternative compile target - compile the java code with optimzation on and debug off -->
 	<target name="compile-optimize" depends="compile-compile" description="Compile Java sources with optimisation on">
-		<javac srcdir="${src.java.dir}:${build.src.dir}" destdir="${build.classes.dir}" deprecation="true" includes="**/*.java" debug="No" optimize="Yes" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true">
+		<javac srcdir="${src.java.dir}" destdir="${build.classes.dir}" deprecation="true" includes="**/*.java" debug="No" optimize="Yes" source="1.5" target="1.5"  memoryInitialSize="128m" memoryMaximumSize="512m" fork="true">
 			<classpath refid="project.classpath" />
 		</javac>
 	</target>
