GUI - Benefit tag displays as 'COST' - ID: 2787686 Issue#: 2787686
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@9953 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -4097,7 +4097,7 @@ Ability.Info.Type=<b>Type:</b>&nbsp;{0}
 Ability.Info.Cost= &nbsp; <b>Cost:</b>&nbsp;{0}
 Ability.Info.Multiple=Can be taken more than once
 Ability.Info.Stacks=Stacks
-Ability.Info.Benefit=<b>Cost:</b>&nbsp;{0}
+Ability.Info.Benefit=<b>Benefit:</b>&nbsp;{0}
 
 InfoAbility.Title={0} Info
 InfoAbility.Remaining.Label=remaining:
