Switch autobuilds back to SourceForge
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10399 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/project.properties
+++ b/project.properties
@@ -102,8 +102,8 @@ maven.sourceforge.publish.includes=*.jar,*.exe,*.zip,*.dmg,*.asc
 #########################################
 # The properties for the site goal
 #########################################
-pom.siteAddress=pcgen.org
-pom.siteDirectory=html/website/autobuilds
+pom.siteAddress=shell.sourceforge.net
+pom.siteDirectory=/home/groups/p/pc/pcgen/htdocs/autobuilds
 maven.site.deploy.method=ssh
 maven.site.failonerror=false
 maven.site.tar.options=-xUf
